--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ But getting back to the [[chickenwire]]...]
 </tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. (click-append: &quot;which could not keep out the wild coyotes.&quot;) [
 
 
-You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again.] (click-append: &quot;sliding accross from post to post, again and again.&quot;) [
+You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again.] (click-append: &quot;sliding across from post to post, again and again.&quot;) [
 
 
 How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.] (click-append: &quot;friction that bordered on burn.&quot;) [
@@ -385,11 +385,11 @@ Jade asks him to leave.] (click-append: &quot;Jade asks him to leave.&quot;) [
 He won&#39;t leave.] (click-append: &quot;He won&#39;t leave.&quot;) [
 
 
-Today, against her better judgment, and because she&#39;s too tired to argue any more, Jade lets X in so he can install the chickenwire for her cat.
+Today, against her better judgment, and because she&#39;s too tired to argue any more, Jade lets X in so he can install the chickenwire for her cat.] (click-append: &quot;the chickenwire for her cat.&quot;) [
 
-&lt;img src=&quot;img/cat.png&quot; alt=&quot;cat on couch&quot; /&gt;]
+&lt;img src=&quot;img/cat.png&quot; alt=&quot;cat on couch&quot; /&gt;
 
-X insists he has something urgent to tell her. (click-append: &quot;X insists he has something urgent to tell her.&quot;) [ A secret about you.] (click-append: &quot;A secret about you&quot;) [ Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret.] (click-append: &quot;our little secret.&quot;) [
+X insists he has something urgent to tell her.] (click-append: &quot;X insists he has something urgent to tell her.&quot;) [ A secret about you.] (click-append: &quot;A secret about you.&quot;) [ Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret.] (click-append: &quot;our little secret.&quot;) [
 
 
 Once more, she asks him to leave.] (click-append: &quot;she asks him to leave.&quot;) [
@@ -401,19 +401,26 @@ He refuses.] (click-append: &quot;He refuses.&quot;) [
 She calls you, panicked, afraid.] (click-append: &quot;panicked, afraid.&quot;) [
 
 
-&quot;He showed up and he won&#39;t leave,&quot; she says. &quot;Please come help.&quot;]
+&quot;He showed up and he won&#39;t leave,&quot; she says. &quot;Please come help.&quot;
 
 
-By now the chickenwire fencing installation is proceeding against all protestation. (click-append: &quot;protestation&quot;) [ because some men are conditioned to think that no means yes, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer (click-replace: &quot;persuer&quot;) [stalked]] As if women&#39;s desires and refusals are inconsequential. (click-replace: &quot;inconsequential&quot;) [meaningless] (click-replace: &quot;meaningless&quot;) [token gestures of resistance, designed to be overcome] (click-append: &quot;token gestures of resistance, designed to be overcome.&quot;) [ 
+You can&#39;t refuse.] (click-append: &quot;You can&#39;t refuse.&quot;) [
+
+
+By now the chickenwire fencing installation is proceeding against all protestation.] (click-append: &quot;proceeding against all protestation&quot;) [ because some men are conditioned to think that no means yes] (click-append: &quot;some men are conditioned to think that no means yes&quot;) [, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer] (click-replace: &quot;persuer&quot;) [stalker] (click-append: &quot;the part of the stalker.&quot;) [ As if women&#39;s desires and refusals are inconsequential.] (click-replace: &quot;inconsequential&quot;) [meaningless] (click-replace: &quot;meaningless&quot;) [token gestures of resistance, designed to be overcome] (click-append: &quot;As if women&#39;s desires and refusals are token gestures of resistance, designed to be overcome.&quot;) [ 
 
 
 Chickenwire fencing, purposed to keep danger away, is now the cause of your detainment in a small apartment with a madman and his whimsy.] (click-replace: &quot;whimsy&quot;) [stubborn resistance] (click-replace: &quot;stubborn resistance&quot;) [continued efforts at coercive control] (click-append: &quot;continued efforts at coercive control.&quot;) [
 
 
-You sit stone-faced in a lounge chair in Jade&#39;s living room, your side-eye trained on the minor construction project, making sure the nail gun isn&#39;t aimed at either of you.] (click-append: &quot;making sure the nail gun isn&#39;t aimed at either of you.&quot;) [ For hours.] (click-append: &quot;For hours.&quot;) [
+You sit stone-faced in a lounge chair in Jade&#39;s living room, your side-eye trained on the minor construction project, making sure the nail gun isn&#39;t aimed at either of you.] (click-append: &quot;making sure the nail gun isn&#39;t aimed at either of you.&quot;) [ 
 
 
-He has done his best to alienate you from one friend after another.]  (click-append: &quot;He has done his best to alienate you from one friend after another.&quot;) [ It&#39;s a textbook tactic for any abuser.] (click-append: &quot;It&#39;s a textbook tactic for any abuser.&quot;) [
+For hours.] (click-append: &quot;For hours.&quot;) [
+
+
+He has done his best to alienate you from one friend after another.]  (click-append: &quot;He has done his best to alienate you from one friend after another.&quot;) [ It&#39;s a textbook tactic from any abuser&#39;s playbook.] (click-append: &quot;It&#39;s a textbook tactic from any abuser&#39;s playbook.&quot;) [
+
 
 You wish you hadn&#39;t saved him the night he went into convulsions from taking too many drugs.] (click-append: &quot;he went into convulsions from taking too many drugs.&quot;) [ The night of your engagement.] (click-append: &quot;The night of your engagement.&quot;) [ You fantasise that he&#39;ll fall off the ladder and land in hospital, where he can&#39;t threaten you any more.]
 
@@ -424,9 +431,11 @@ Do you [[go back to your apartment with X]] that night or do you [[beg him to st
 
 
 
-</tw-passagedata><tw-passagedata pid="14" name="go back to your apartment with X" tags="" position="558,762" size="100,100">If this were a game of survival, you&#39;d be in real trouble now. Can&#39;t you see that you need to get as much distance between you and X as possible?
+</tw-passagedata><tw-passagedata pid="14" name="go back to your apartment with X" tags="" position="558,762" size="100,100">If this were a game of survival, you&#39;d be in real trouble now. Can&#39;t you see that you need to get as much distance between you and X as possible? (click-append: &quot;you need to get as much distance between you and X as possible?&quot;) [
 
-Apologies for bringing you here under false pretence. You navigated here under the illusion of choice, or perhaps a misguided hope of reconciliation, but the reality is that the stage is set for disaster. It&#39;s only a matter of time, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]]. </tw-passagedata><tw-passagedata pid="15" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">You need time to think. To plot a way out. How can you extricate your life from his when you are under 24/7 watch? You&#39;re exhausted.
+Apologies for bringing you here under false pretence.]  (click-append: &quot;Apologies for bringing you here under false pretence.&quot;) [ You navigated here under the illusion of choice (click-append: &quot;illusion of choice&quot;) [, or perhaps a misguided hope of reconciliation,] (click-append: &quot;a misguided hope of reconciliation&quot;) [, thinking perhaps that this was a game] but the reality is that the stage is set for disaster.] (click-append: &quot;the stage is set for disaster.&quot;) [
+
+It&#39;s only a matter of time until his next episode, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]].]</tw-passagedata><tw-passagedata pid="15" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">You need time to think. To plot a way out. How can you extricate your life from his when you are under 24/7 watch? You&#39;re exhausted.
 
 &lt;img src=&quot;img/catnap.png&quot; alt=&quot;cat nap sleep mask&quot; /&gt;
 
@@ -439,23 +448,36 @@ In the meantime, you feel imprisoned in your small apartment, as if the walls ha
 You give X the illusion of hope. (click-append: &quot;of hope&quot;) [ and maybe you want just as badly to salvage the relationship you&#39;d fought to build] (click-append: &quot;to build&quot;) [, those interminable nine months of global rendezvous as you awaited your visa approval] (click-append: &quot;visa approval&quot;) [, neither his country nor yours permitting the other entry]
 
 
-&quot;Just a few days,&quot; [[you plead]]. </tw-passagedata><tw-passagedata pid="16" name="you plead" tags="" position="951,775" size="100,100">You go to couples therapy.
+&quot;Just a few days,&quot; [[you plead]]. </tw-passagedata><tw-passagedata pid="16" name="you plead" tags="" position="951,775" size="100,100">You go to couples therapy. (click-append: &quot;You go to couples therapy&quot;) [, or rather you plead your case to X&#39;s therapist] (click-append: &quot;or rather you plead your case to X&#39;s therapist.&quot;) [
 
-X apologises for his behaviour. He promises not to track you anymore. (click-replace: &quot;track&quot;) [stalk]
 
-He begs you to give him one more chance. (click-replace: &quot;He begs you to give him one more chance.&quot;)[He threatens to kill himself if you leave.](click-replace: &quot;himself&quot;) [you](click-replace: &quot;leave&quot;) [ever meet someone new]
+X apologises for his behaviour.] (click-append: &quot;X apologises for his behaviour.&quot;) [ He promises not to track you anymore.] (click-replace: &quot;track&quot;) [stalk] (click-append: &quot;He promises not to stalk you anymore.&quot;) [ He promises to stop threatening to kill himself if you leave.] (click-replace: &quot;threatening to kill himself&quot;) [threatening to kill you] (click-append: &quot;if you leave.&quot;) [
+
+
+He begs you to give him one more chance.] (click-append: &quot;He begs you to give him one more chance.&quot;)[ He threatens to kill himself if you leave.](click-replace: &quot;himself&quot;) [you](click-replace: &quot;leave&quot;) [ever meet someone new] (click-append: &quot;He threatens to kill you if you leave.&quot;) [
+
+
+He tracks you.] (click-replace: &quot;tracks&quot;) [stalks] (click-append: &quot;He stalks you&quot;) [ again] (click-append: &quot;again&quot;) [ and again] (click-append: &quot;again and again&quot;) [ and again] (click-append: &quot;He stalks you again and again and again.&quot;) [
+
+You go to couples therapy. X apologises for his behaviour.] (click-append: &quot;You go to couples therapy. X apologises for his behaviour.&quot;) [
 
 [[But all of his promises are dandelions in the wind.]]
 
-&lt;img class=&quot;passage-image&quot; src=&quot;img/dandelions.jpg&quot; alt=&quot;dandelions blowing in the wind&quot; /&gt;</tw-passagedata><tw-passagedata pid="17" name="But all of his promises are dandelions in the wind." tags="" position="1127,765" size="100,100">It&#39;s not just one thing. It is many repeated variations on the same themes.
+&lt;img class=&quot;passage-image&quot; src=&quot;img/dandelions.jpg&quot; alt=&quot;dandelions&quot; /&gt;]</tw-passagedata><tw-passagedata pid="17" name="But all of his promises are dandelions in the wind." tags="" position="1127,765" size="100,100">It&#39;s not just one thing. It is many repeated variations on the same themes.
 
 
-* Popping In (click-append: &quot;Popping In&quot;) [—as in &quot;popping in&quot; to pick up a non-functional iPad when he&#39;s meant to be at work.] (click-replace: &quot;a non-functional iPad&quot;) [his passport] (click-replace: &quot;meant to be at work&quot;) [sworn to give you space for a few days and is not actually planning international travel] (click-append: &quot;international travel&quot;) [. Other definitions of &quot;popping in&quot; include...] (click-append: &quot;include&quot;) [ spying on you through the gap under the front door] (click-append: &quot;front door&quot;) [ and pretending to have dropped a non-specific something on the floor]
-* Driving By (click-append: &quot;Driving By&quot;) [—this would seem to straightforward, and at first it is. You spot his vehicle travelling up and down your street at all hours.] (click-append: &quot;all hours&quot;) [, so you call him on it] (click-append: &quot;call him on it&quot;) [—because you aren&#39;t crazy] (click-replace: &quot;aren&#39;t crazy&quot;) [are sick of his gaslighting] (click-append: &quot;gaslighting&quot;) [—and he says that your street is en route to his jobs] (click-prepend: &quot;street&quot;) [suburban, not very well trafficked ] (click-append: &quot;his jobs&quot;) [. After that, it&#39;s some time before you figure out that he&#39;s now borrowing his sister&#39;s car to drive by] (click-replace: &quot;sister&quot;) [mum]
-* The Illegal (click-append: &quot;The Illegal&quot;) [—as you would expect, there&#39;s basic stalker operandus modi like breaking into your phone.](click-replace: &quot;breaking&quot;) [trying to break] (click-replace: &quot;phone&quot;) [apartment](click-append: &quot;apartment&quot;) [ long after he&#39;s stopped paying rent] (click-replace: &quot;stopped paying rent&quot;) [vacated the premises] (click-replace: &quot;vacated the premises&quot;) [no longer got access to your place due to changed locks] (click-replace: &quot;changed locks&quot;) [an Intervention Order] (click-append: &quot;Intervention Order&quot;) [, which you realised you needed when you found a GSM listening device under your bed] (click-append: &quot; under your bed&quot;) [; you started sleeping with a hammer] 
+* Popping In (click-append: &quot;Popping In&quot;) [—as in &quot;popping in&quot; to pick up a non-functional iPad when he&#39;s meant to be at work.] (click-replace: &quot;a non-functional iPad&quot;) [his passport] (click-replace: &quot;meant to be at work&quot;) [sworn to give you space for a few days and is not actually planning international travel] (click-append: &quot;not actually planning international travel.&quot;) [ 
+
+&quot;Popping in&quot; also includes spying on you through the gap under the front door.] (click-append: &quot;front door&quot;) [ while pretending to have dropped a non-specific something] (click-append: &quot;a non-specific something&quot;) [ that requires him to examine the drafty space between the front door and floor] (click-append: &quot;the drafty space between the front door and floor.&quot;) [ There&#39;s never anything but lint.] (click-replace: &quot;lint&quot;) [awkwardness]
+
+* Driving By (click-append: &quot;Driving By&quot;) [—this would seem to straightforward, and at first it is.] (click-append: &quot;at first it is.&quot;) [ You spot his vehicle travelling up and down your street at all hours.] (click-append: &quot;at all hours&quot;) [, so you call him on it] (click-append: &quot;call him on it&quot;) [—because you aren&#39;t crazy] (click-replace: &quot;aren&#39;t crazy&quot;) [are sick of his gaslighting] (click-append: &quot;you are sick of his gaslighting&quot;) [—and he says that your street is en route to his jobs] (click-prepend: &quot;street&quot;) [suburban, not very well trafficked ] (click-append: &quot;his jobs&quot;) [. After that, he starts borrowing his sister&#39;s car to disguise his stalking] (click-replace: &quot;sister&quot;) [mum]
+
+* The Illegal (click-append: &quot;The Illegal&quot;) [—as you would expect, there&#39;s basic stalker operandus modi like breaking into your phone.](click-replace: &quot;breaking&quot;) [trying to break] (click-replace: &quot;phone&quot;) [apartment](click-append: &quot;apartment&quot;) [ long after he&#39;s stopped paying rent] (click-replace: &quot;stopped paying rent&quot;) [vacated the premises] (click-replace: &quot;vacated the premises&quot;) [no longer got access to your place due to changed locks] (click-replace: &quot;changed locks&quot;) [an Intervention Order] (click-append: &quot;Intervention Order&quot;) [, which you realised you needed when you found a GSM listening device under your bed] (click-append: &quot;when you found a GSM listening device under your bed&quot;) [
+
+You started sleeping with a hammer] (click-append: &quot;You started sleeping with a hammer.&quot;) [
 
 
-So, once again, [[you plead]] with him to change. 
+So, once again, [[you plead]] with him to change.]
 
 
 What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing&quot;) [desperate] (click-replace: &quot;desperate&quot;) [humiliating] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive]
@@ -467,7 +489,7 @@ Now with ever more reason to work things out, [[you plead]] with him for a fresh
 [[But all of his promises are dandelions in the wind.]] 
 
 
-(if:visits &gt;= 3)[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom? (click-append: &quot;Relief, maybe, or a sense of freedom?&quot;) [
+(if:visits &gt;= 2)[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom? (click-append: &quot;Relief, maybe, or a sense of freedom?&quot;) [
 
 
 So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other forms of systemic abuse...] (click-append: &quot;systemic abuse...&quot;) [
