--- a/index.html
+++ b/index.html
@@ -157,17 +157,22 @@ The phone is still ringing. You&#39;re afraid that Jade is bearing the brunt of 
 
 How hard it is to smile in your skirt suit. (stop:)
 
-&lt;img src=&quot;img/court1.png&quot; alt=&quot;dressed to go to court&quot; /&gt;
+&lt;img src=&quot;img/court1.png&quot; alt=&quot;dressed to go to court&quot; /&gt;]
 
-&lt;img src=&quot;img/court2.png&quot; alt=&quot;dressed to go to court&quot; /&gt;]
 
 You will know all along that his goal is not shared custody. (click-replace: &quot;not shared custody&quot;) [maximising your distress and suffering] (click-append: &quot;suffering.&quot;) [
 
 
-But the judge will not believe you because you&#39;ve lived such a quote-unquote (t8n: &quot;rumble&quot;) [colourful lifestyle].] (click-append: &quot;colourful lifestyle.&quot;) [ He&#39;ll disregard your sworn statements of domestic violence and it will seem that nothing you do or say will matter.] (click-append: &quot;nothing you do or say will matter&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &quot;Maybe I don&#39;t want to be a father&quot;]
+&lt;img src=&quot;img/court2.png&quot; alt=&quot;dressed to go to court&quot; /&gt;
 
 
-Words etched in your neuropathways.
+But the judge will not believe you because you&#39;ve lived such a quote-unquote (t8n: &quot;rumble&quot;) [colourful lifestyle].] (click-append: &quot;colourful lifestyle.&quot;) [ 
+
+
+The judge will disregard your sworn statements of domestic violence and it will seem that nothing you do or say will matter.] (click-append: &quot;nothing you do or say will matter&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &quot;Maybe I don&#39;t want to be a father&quot;]
+
+
+(t8n-delay: 12s) + (t8n: &quot;fade-down&quot;) [Words etched in your neuropathways.]
 
 
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
@@ -438,17 +443,17 @@ Do you [[go back to your apartment with X]] that night or do you [[beg him to st
 
 Apologies for bringing you here under false pretence.]  (click-append: &quot;Apologies for bringing you here under false pretence.&quot;) [ You navigated here under the illusion of choice (click-append: &quot;illusion of choice&quot;) [, or perhaps a misguided hope of reconciliation,] (click-append: &quot;a misguided hope of reconciliation&quot;) [, thinking perhaps that this was a game] but the reality is that the stage is set for disaster.] (click-append: &quot;the stage is set for disaster.&quot;) [
 
-It&#39;s only a matter of time until his next episode, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]].]</tw-passagedata><tw-passagedata pid="15" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">You need time to think. To plot a way out. How can you extricate your life from his when you are under 24/7 watch? You&#39;re exhausted.
+It&#39;s only a matter of time until his next episode, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]].]</tw-passagedata><tw-passagedata pid="15" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">You need time to think. (click-append: &quot;You need time to think.&quot;) [ To plot a way out.] (click-append: &quot;To plot a way out.&quot;) [ How can you extricate your life from his when you are under 24/7 watch?] (click-append: &quot;How can you extricate your life from his when you are under 24/7 watch?&quot;) [ You&#39;re exhausted.
 
 &lt;img src=&quot;img/catnap.png&quot; alt=&quot;cat nap sleep mask&quot; /&gt;
 
-Your time in Australia could be cut short. X has phoned immigration to notify them that your relationship has broken down. If he can&#39;t have you then he doesn&#39;t want you here. He&#39;d rather kill you than see you with anyone else. If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.
+Your time in Australia could be cut short.] (click-append: &quot;Your time in Australia could be cut short.&quot;) [ X has phoned immigration to notify them that your relationship has broken down.] (click-append: &quot;your relationship has broken down.&quot;) [ If he can&#39;t have you then he doesn&#39;t want you here.] (click-append: &quot;If he can&#39;t have you then he doesn&#39;t want you here.&quot;) [ He&#39;s told you dozens of times: He&#39;d rather kill you than see you with anyone else.] (click-append: &quot;He&#39;d rather kill you than see you with anyone else.&quot;) [ If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.] (click-append: &quot;If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.&quot;) [
 
 
-In the meantime, you feel imprisoned in your small apartment, as if the walls have eyes and ears. Even when you&#39;re alone you are not. This isn&#39;t paranoia: it&#39;s coercive control.
+In the meantime, you feel imprisoned in your small apartment, as if the walls have eyes and ears.] (click-append: &quot;the walls have eyes and ears.&quot;) [ Even when you&#39;re alone you&#39;re not.] (click-append: &quot;Even when you&#39;re alone you&#39;re not.&quot;) [ This isn&#39;t paranoia.] (click-append: &quot;This isn&#39;t paranoia&quot;) [: it&#39;s coercive control] (click-append: &quot;it&#39;s coercive control.&quot;) [
 
 
-You give X the illusion of hope. (click-append: &quot;of hope&quot;) [ and maybe you want just as badly to salvage the relationship you&#39;d fought to build] (click-append: &quot;to build&quot;) [, those interminable nine months of global rendezvous as you awaited your visa approval] (click-append: &quot;visa approval&quot;) [, neither his country nor yours permitting the other entry]
+You give X the illusion of hope.] (click-append: &quot;of hope&quot;) [ and tbh you want just as badly to salvage the relationship you&#39;d fought so hard to build] (click-append: &quot;fought so hard to build&quot;) [, those interminable nine months of global rendezvous as you awaited your visa approval] (click-append: &quot;as you awaited your visa approval&quot;) [, neither his country nor yours permitting the other entry]
 
 
 &quot;Just a few days,&quot; [[you plead]]. </tw-passagedata><tw-passagedata pid="16" name="you plead" tags="" position="951,775" size="100,100">You go to couples therapy. (click-append: &quot;You go to couples therapy&quot;) [, or rather you plead your case to X&#39;s therapist] (click-append: &quot;or rather you plead your case to X&#39;s therapist.&quot;) [
@@ -498,10 +503,10 @@ Now with ever more reason to work things out, [[you plead]] with him for a fresh
 So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other forms of systemic abuse...] (click-append: &quot;systemic abuse...&quot;) [
 
 
-Instead you&#39;re a puddle after the rain.]
+Instead you&#39;re a puddle after the rain.
 
 
-&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-replace: &quot;free from violence.&quot;) [
+&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;]</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-replace: &quot;free from violence.&quot;) [
 
 &lt;img src=&quot;img/baby1.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
 
