--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@ You sober up instantly and ask Jade to help you escort X and his delusional thin
 &quot;It was the pot,&quot; he pleads, by way of explanation.] (click-append: &quot;explanation.&quot;) [ But you know it was the ice that triggered his psychosis.] (click-append: &quot;the ice&quot;) [ and his insane jealousy] (click-append: &quot;triggered his psychosis.&quot;) [
 
 
-The phone is still ringing. You&#39;re afraid that Jade is bearing the brunt of X&#39;s stalking while you&#39;re at work. You&#39;d better [[call X]].] </tw-passagedata><tw-passagedata pid="5" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. (click-append: &quot;for an entire year.&quot;) [You will have a designated court outfit that haunts your closet and emerges on days that make you (t8n: &quot;rumble&quot;)[tremble and shake].] (click-append: &quot;tremble and shake.&quot;) [
+The phone is still ringing. You&#39;re afraid that Jade is bearing the brunt of X&#39;s stalking while you&#39;re at work. You&#39;d better [[call X]].] </tw-passagedata><tw-passagedata pid="5" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. (click-append: &quot;for an entire year.&quot;) [ 
+
+
+You will have a designated court outfit that haunts your closet and emerges on days that make you (t8n: &quot;rumble&quot;)[tremble and shake].] (click-append: &quot;tremble and shake.&quot;) [
 
 How hard it is to smile in your skirt suit. (stop:)
 
@@ -169,7 +172,10 @@ You will know all along that his goal is not shared custody. (click-replace: &qu
 But the judge will not believe you because you&#39;ve lived such a quote-unquote (t8n: &quot;rumble&quot;) [colourful lifestyle].] (click-append: &quot;colourful lifestyle.&quot;) [ 
 
 
-The judge will disregard your sworn statements of domestic violence and it will seem that nothing you do or say will matter.] (click-append: &quot;nothing you do or say will matter&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &quot;Maybe I don&#39;t want to be a father&quot;]
+The judge will disregard your sworn statements of domestic violence.] (click-append: &quot;The judge will disregard your sworn statements of domestic violence&quot;) [ and X&#39;s admission of planting the listening device and stalking you] (click-append: &quot;and X&#39;s admission of planting the listening device and stalking you&quot;) [, forcing you to see him several times a week &quot;in the best interests of the child&quot; even as X&#39;s drug tests come back dirty] (click-append: &quot;even as X&#39;s drug tests come back dirty.&quot;) [
+
+
+It will seem that nothing you do or say matters.] (click-append: &quot;It will seem that nothing you do or say matters&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &quot;Maybe I don&#39;t want to be a father&quot;]
 
 
 (t8n-delay: 12s) + (t8n: &quot;fade-down&quot;) [Words etched in your neuropathways.]
@@ -445,9 +451,14 @@ Apologies for bringing you here under false pretence.]  (click-append: &quot;Apo
 
 It&#39;s only a matter of time until his next episode, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]].]</tw-passagedata><tw-passagedata pid="15" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">You need time to think. (click-append: &quot;You need time to think.&quot;) [ To plot a way out.] (click-append: &quot;To plot a way out.&quot;) [ How can you extricate your life from his when you are under 24/7 watch?] (click-append: &quot;How can you extricate your life from his when you are under 24/7 watch?&quot;) [ You&#39;re exhausted.
 
+
 &lt;img src=&quot;img/catnap.png&quot; alt=&quot;cat nap sleep mask&quot; /&gt;
 
-Your time in Australia could be cut short.] (click-append: &quot;Your time in Australia could be cut short.&quot;) [ X has phoned immigration to notify them that your relationship has broken down.] (click-append: &quot;your relationship has broken down.&quot;) [ If he can&#39;t have you then he doesn&#39;t want you here.] (click-append: &quot;If he can&#39;t have you then he doesn&#39;t want you here.&quot;) [ He&#39;s told you dozens of times: He&#39;d rather kill you than see you with anyone else.] (click-append: &quot;He&#39;d rather kill you than see you with anyone else.&quot;) [ If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.] (click-append: &quot;If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.&quot;) [
+
+Your time in Australia could be cut short.] (click-append: &quot;Your time in Australia could be cut short.&quot;) [ X has phoned immigration to notify them that your relationship has broken down.] (click-append: &quot;your relationship has broken down.&quot;) [ If he can&#39;t have you then he doesn&#39;t want you here.] (click-append: &quot;If he can&#39;t have you then he doesn&#39;t want you here.&quot;) [ 
+
+
+He&#39;s told you dozens of times: He&#39;d rather kill you than see you with anyone else.] (click-append: &quot;He&#39;d rather kill you than see you with anyone else.&quot;) [ If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.] (click-append: &quot;If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.&quot;) [
 
 
 In the meantime, you feel imprisoned in your small apartment, as if the walls have eyes and ears.] (click-append: &quot;the walls have eyes and ears.&quot;) [ Even when you&#39;re alone you&#39;re not.] (click-append: &quot;Even when you&#39;re alone you&#39;re not.&quot;) [ This isn&#39;t paranoia.] (click-append: &quot;This isn&#39;t paranoia&quot;) [: it&#39;s coercive control] (click-append: &quot;it&#39;s coercive control.&quot;) [
@@ -488,7 +499,7 @@ You started sleeping with a hammer] (click-append: &quot;You started sleeping wi
 So, once again, [[you plead]] with him to change.]
 
 
-What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing&quot;) [desperate] (click-replace: &quot;desperate&quot;) [humiliating] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive]
+What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing sex&quot;) [desperate sex] (click-replace: &quot;desperate sex&quot;) [humiliating sex] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive]
 
 
 Now with ever more reason to work things out, [[you plead]] with him for a fresh start. (click-replace: &quot;for a fresh start&quot;) [to go back to the way things used to be between you when you had love and mutual respect] (click-append: &quot;when you had&quot;) [ the illusion of]
@@ -506,7 +517,7 @@ So you would expect after two-and-a-half years of abuse drawn out through court 
 Instead you&#39;re a puddle after the rain.
 
 
-&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;]</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-replace: &quot;free from violence.&quot;) [
+&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;]</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-append: &quot;free from violence.&quot;) [
 
 &lt;img src=&quot;img/baby1.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
 
