--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ Now with ever more reason to work things out, [[you plead]] with him for a fresh
 (if:visits &gt;= 2)[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom? (click-append: &quot;Relief, maybe, or a sense of freedom?&quot;) [
 
 
-So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other forms of systemic abuse...] (click-append: &quot;systemic abuse...&quot;) [
+So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other systemic abuse...] (click-append: &quot;systemic abuse...&quot;) [
 
 
 Instead you&#39;re a puddle after the rain.
