--- a/index.html
+++ b/index.html
@@ -517,7 +517,9 @@ So you would expect after two-and-a-half years of abuse drawn out through court 
 Instead you&#39;re a puddle after the rain.
 
 
-&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;]</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-append: &quot;free from violence.&quot;) [
+&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;]
+
+[[test room]]</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-append: &quot;free from violence.&quot;) [
 
 &lt;img src=&quot;img/baby1.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
 
@@ -565,7 +567,9 @@ A certain incubus picks you as an easy target.] (click-replace: &quot;an easy ta
 &lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;]
 
 
-Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata></tw-storydata>
+Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata><tw-passagedata pid="23" name="test room" tags="" position="1208,637" size="100,100">Delete me after.
+
+&lt;audio src=.audio/fence.mp3&quot; autoplay /&gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
