--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ You battle for your rights, reading the fine print.] (click-append: &quot;fine p
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
 
 
-&lt;audio src=.audio/fence.mp3&quot; autoplay loop/ &gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. (click-append: &quot;sequinned gowns.&quot;) [
+&lt;audio src=&quot;./audio/fence.mp3&quot; autoplay loop/ &gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. (click-append: &quot;sequinned gowns.&quot;) [
 
 
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
